--- a/docs-web/src/main/webapp/src/partial/docs/document.edit.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.edit.html
@@ -28,6 +28,13 @@
             typeahead-wait-ms="200" ng-disabled="fileIsUploading" />
         </div>
       </div>
+      <div class="form-group" ng-class="{ 'has-error': !documentForm.gender.$valid && documentForm.$dirty }">
+        <label class="col-sm-2 control-label" for="inputGender">{{ 'document.gender' | translate }}</label>
+        <div class="col-sm-10">
+          <input ng-maxlength="100" class="form-control" type="text" id="inputGender"
+            name="gender" ng-model="document.gender" autocomplete="off" ng-disabled="fileIsUploading" />
+        </div>
+      </div>
       <div class="form-group" ng-class="{ 'has-error': !documentForm.gpa.$valid && documentForm.$dirty }">
         <label class="col-sm-2 control-label" for="inputGPA">{{ 'document.gpa' | translate }}</label>
         <div class="col-sm-10">
