--- a/docs-web/src/main/webapp/src/partial/docs/document.edit.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.edit.html
@@ -42,6 +42,13 @@
             name="gpa" ng-model="document.gpa" autocomplete="off" ng-disabled="fileIsUploading" />
         </div>
       </div>
+      <div class="form-group" ng-class="{ 'has-error': !documentForm.age.$valid && documentForm.$dirty }">
+        <label class="col-sm-2 control-label" for="inputAge">{{ 'document.age' | translate }}</label>
+        <div class="col-sm-10">
+          <input ng-maxlength="100" class="form-control" type="text" id="inputAGE"
+            name="age" ng-model="document.age" autocomplete="off" ng-disabled="fileIsUploading" />
+        </div>
+      </div>
       <div class="form-group" ng-class="{ 'has-error': !documentForm.description.$valid }">
         <label class="col-sm-2 control-label" for="inputDescription">{{ 'document.description' | translate }}</label>
         <div class="col-sm-10">
