--- a/docs-web/src/main/webapp/src/partial/docs/document.edit.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.edit.html
@@ -29,6 +29,24 @@
         </div>
       </div>
       <div class="form-group">
+        <label class="col-sm-2 control-label" for="inputProgram">{{ 'document.program' | translate }}</label>
+        <div class="col-sm-10">
+          <select class="form-control" id="inputProgram" ng-model="document.program" ng-disabled="fileIsUploading">
+            <option value="">--</option>
+            <option value="mba">MBA</option>
+            <option value="mscs">MSCS</option>
+            <option value="msism">MSISM</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group" ng-class="{ 'has-error': !documentForm.gpa.$valid && documentForm.$dirty }">
+        <label class="col-sm-2 control-label" for="inputGPA">{{ 'document.gpa' | translate }}</label>
+        <div class="col-sm-10">
+          <input ng-maxlength="4" class="form-control" type="number" id="inputGPA"
+            name="gpa" ng-model="document.gpa" autocomplete="off" ng-disabled="fileIsUploading" />
+        </div>
+      </div>
+      <div class="form-group">
         <label class="col-sm-2 control-label" for="inputGender">{{ 'document.gender' | translate }}</label>
         <div class="col-sm-10">
           <select class="form-control" id="inputGender" ng-model="document.gender" ng-disabled="fileIsUploading">
@@ -38,17 +56,10 @@
           </select>
         </div>
       </div>
-      <div class="form-group" ng-class="{ 'has-error': !documentForm.gpa.$valid && documentForm.$dirty }">
-        <label class="col-sm-2 control-label" for="inputGPA">{{ 'document.gpa' | translate }}</label>
-        <div class="col-sm-10">
-          <input ng-maxlength="100" class="form-control" type="text" id="inputGPA"
-            name="gpa" ng-model="document.gpa" autocomplete="off" ng-disabled="fileIsUploading" />
-        </div>
-      </div>
       <div class="form-group" ng-class="{ 'has-error': !documentForm.age.$valid && documentForm.$dirty }">
         <label class="col-sm-2 control-label" for="inputAge">{{ 'document.age' | translate }}</label>
         <div class="col-sm-10">
-          <input ng-maxlength="100" class="form-control" type="text" id="inputAGE"
+          <input ng-maxlength="3" class="form-control" type="number" id="inputAGE"
             name="age" ng-model="document.age" autocomplete="off" ng-disabled="fileIsUploading" />
         </div>
       </div>
