--- a/docs-web/src/main/webapp/src/partial/docs/document.edit.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.edit.html
@@ -39,6 +39,20 @@
           </select>
         </div>
       </div>
+      <div class="form-group" ng-class="{ 'has-error': !documentForm.experience.$valid && documentForm.$dirty }">
+        <label class="col-sm-2 control-label" for="inputExperience">{{ 'document.experience' | translate }}</label>
+        <div class="col-sm-10">
+          <input ng-maxlength="2" class="form-control" type="number" id="inputExperience"
+            name="experience" ng-model="document.experience" autocomplete="off" ng-disabled="fileIsUploading" />
+        </div>
+      </div>
+      <div class="form-group" ng-class="{ 'has-error': !documentForm.skills.$valid && documentForm.$dirty }">
+        <label class="col-sm-2 control-label" for="inputSkills">{{ 'document.skills' | translate }}</label>
+        <div class="col-sm-10">
+          <input ng-maxlength="2" class="form-control" type="number" id="inputSkills"
+            name="skills" ng-model="document.skills" autocomplete="off" ng-disabled="fileIsUploading" />
+        </div>
+      </div>
       <div class="form-group" ng-class="{ 'has-error': !documentForm.gpa.$valid && documentForm.$dirty }">
         <label class="col-sm-2 control-label" for="inputGPA">{{ 'document.gpa' | translate }}</label>
         <div class="col-sm-10">
