--- a/docs-web/src/main/webapp/src/partial/docs/document.edit.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.edit.html
@@ -28,6 +28,55 @@
             typeahead-wait-ms="200" ng-disabled="fileIsUploading" />
         </div>
       </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label" for="inputProgram">{{ 'document.program' | translate }}</label>
+        <div class="col-sm-10">
+          <select class="form-control" id="inputProgram" ng-model="document.program" ng-disabled="fileIsUploading">
+            <option value="">--</option>
+            <option value="mba">MBA</option>
+            <option value="mscs">MSCS</option>
+            <option value="msism">MSISM</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group" ng-class="{ 'has-error': !documentForm.experience.$valid && documentForm.$dirty }">
+        <label class="col-sm-2 control-label" for="inputExperience">{{ 'document.experience' | translate }}</label>
+        <div class="col-sm-10">
+          <input ng-maxlength="2" class="form-control" type="number" id="inputExperience"
+            name="experience" ng-model="document.experience" autocomplete="off" ng-disabled="fileIsUploading" />
+        </div>
+      </div>
+      <div class="form-group" ng-class="{ 'has-error': !documentForm.skills.$valid && documentForm.$dirty }">
+        <label class="col-sm-2 control-label" for="inputSkills">{{ 'document.skills' | translate }}</label>
+        <div class="col-sm-10">
+          <input ng-maxlength="2" class="form-control" type="number" id="inputSkills"
+            name="skills" ng-model="document.skills" autocomplete="off" ng-disabled="fileIsUploading" />
+        </div>
+      </div>
+      <div class="form-group" ng-class="{ 'has-error': !documentForm.gpa.$valid && documentForm.$dirty }">
+        <label class="col-sm-2 control-label" for="inputGPA">{{ 'document.gpa' | translate }}</label>
+        <div class="col-sm-10">
+          <input ng-maxlength="4" class="form-control" type="number" id="inputGPA"
+            name="gpa" ng-model="document.gpa" autocomplete="off" ng-disabled="fileIsUploading" />
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-sm-2 control-label" for="inputGender">{{ 'document.gender' | translate }}</label>
+        <div class="col-sm-10">
+          <select class="form-control" id="inputGender" ng-model="document.gender" ng-disabled="fileIsUploading">
+            <option value="">--</option>
+            <option value="male">Male</option>
+            <option value="female">Female</option>
+          </select>
+        </div>
+      </div>
+      <div class="form-group" ng-class="{ 'has-error': !documentForm.age.$valid && documentForm.$dirty }">
+        <label class="col-sm-2 control-label" for="inputAge">{{ 'document.age' | translate }}</label>
+        <div class="col-sm-10">
+          <input ng-maxlength="3" class="form-control" type="number" id="inputAGE"
+            name="age" ng-model="document.age" autocomplete="off" ng-disabled="fileIsUploading" />
+        </div>
+      </div>
       <div class="form-group" ng-class="{ 'has-error': !documentForm.description.$valid }">
         <label class="col-sm-2 control-label" for="inputDescription">{{ 'document.description' | translate }}</label>
         <div class="col-sm-10">
