--- a/docs-web/src/main/webapp/src/partial/docs/document.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.html
@@ -234,6 +234,7 @@
           <th class="col-xs-3" ng-click="sortDocuments(3)">{{ 'document.creation_date' | translate }} <span class="fas fa-chevron-{{ sortColumn == 3 ? (asc ? 'down' : 'up') : '' }}"></span></th>
         </tr>
         </thead>
+
         <tbody>
         <tr ng-if="!documents">
           <td colspan="2" class="text-center">
@@ -271,38 +272,16 @@
         </tbody>
       </table>
 
-      <!-- Document grid -->
-      <div class="row table-documents" ng-show="displayMode == 'grid'">
-        <div ng-if="!documents" class="col-md-12 text-center">
-          <span class="fas fa-circle-notch fa-spin"></span>
-        </div>
+      <table class="row table table-hover table-documents">
+        <thead>
+          <tr>
+            <th class="col-xs-6">{{ 'document.avg_skills' | translate}} </th>
+            <th class="col-xs-6" >{{ 'document.avg_experience' | translate}} </th>
+            <th class="col-xs-6" >{{ 'document.avg_gpa' | translate}} </th>
+          </tr>
+        </thead>
+      </table>
 
-        <div ng-if="totalDocuments == 0" class=" col-md-12 text-center">
-          <span ng-if="search.length == 0">{{ 'document.no_documents' | translate }}</span>
-          <span ng-if="search.length > 0" translate="document.search_empty" translate-values="{ search: search }"></span>
-        </div>
-
-        <div class="col-md-12 row">
-          <div ng-repeat-start="document in documents" class="col-md-4">
-            <div class="thumbnail" ng-class="{ active: $stateParams.id == document.id }">
-              <a href="#/document/view/{{ document.id }}" class="file-thumbnail">
-                <img class="img-responsive" ng-if="document.file_id" ng-src="../api/file/{{ document.file_id }}/data?size=thumb" />
-              </a>
-
-              <div class="file-info hidden-md">
-                <div></div>
-                <div class="v-align file-name text-center" title="{{document.title}}">
-                  {{ document.title }} ({{ document.file_count }})
-                  <span class="fas fa-share" ng-if="document.shared" uib-tooltip="{{ 'document.shared' | translate }}"></span>
-                  <span class="fas fa-random" ng-if="document.active_route" uib-tooltip="{{ document.current_step_name }}"></span>
-                </div>
-                <div></div>
-              </div>
-            </div>
-          </div>
-          <div class="clearfix" ng-repeat-end ng-if="($index + 1) % 3 == 0"></div>
-        </div>
-      </div>
 
       <div class="text-center pagination-box">
         <ul uib-pagination
