--- a/docs-web/src/main/webapp/src/partial/docs/document.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.html
@@ -231,7 +231,7 @@
         <thead>
         <tr>
           <th class="col-xs-6" ng-click="sortDocuments(1)">{{ 'document.title' | translate }} <span class="fas fa-chevron-{{ sortColumn == 1 ? (asc ? 'down' : 'up') : '' }}"></span></th>
-          <th class="col-xs-3" ng-click="sortDocuments(3)">{{ 'document.creation_date' | translate }} <span class="fas fa-chevron-{{ sortColumn == 3 ? (asc ? 'down' : 'up') : '' }}"></span></th>
+          <th class="col-xs-3" ng-click="sortDocuments(3)">{{ 'document.title' | translate }} <span class="fas fa-chevron-{{ sortColumn == 3 ? (asc ? 'down' : 'up') : '' }}"></span></th>
         </tr>
         </thead>
         <tbody>
@@ -269,6 +269,16 @@
           </td>
         </tr>
         </tbody>
+      </table>
+
+      <table class="row table table-hover table-documents">
+        <thead>
+          <tr>
+            <th class="col-xs-6" ng-click="sortDocuments(1)">{{ 'document.avg_gpa' | translate }} <span class="fas fa-chevron-{{ sortColumn == 1 ? (asc ? 'down' : 'up') : '' }}"></span></th>
+            <th class="col-xs-3" ng-click="sortDocuments(3)">{{ 'document.avg_experience' | translate }} <span class="fas fa-chevron-{{ sortColumn == 3 ? (asc ? 'down' : 'up') : '' }}"></span></th>
+            <th class="col-xs-3" ng-click="sortDocuments(3)">{{ 'document.avg_skills' | translate }} <span class="fas fa-chevron-{{ sortColumn == 3 ? (asc ? 'down' : 'up') : '' }}"></span></th>
+          </tr>
+        </thead>
       </table>
 
       <!-- Document grid -->
