--- a/docs-web/src/main/webapp/src/partial/docs/document.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.html
@@ -231,7 +231,7 @@
         <thead>
         <tr>
           <th class="col-xs-6" ng-click="sortDocuments(1)">{{ 'document.title' | translate }} <span class="fas fa-chevron-{{ sortColumn == 1 ? (asc ? 'down' : 'up') : '' }}"></span></th>
-          <th class="col-xs-3" ng-click="sortDocuments(3)">{{ 'document.title' | translate }} <span class="fas fa-chevron-{{ sortColumn == 3 ? (asc ? 'down' : 'up') : '' }}"></span></th>
+          <th class="col-xs-3" ng-click="sortDocuments(3)">{{ 'document.creation_date' | translate }} <span class="fas fa-chevron-{{ sortColumn == 3 ? (asc ? 'down' : 'up') : '' }}"></span></th>
         </tr>
         </thead>
         <tbody>
@@ -274,11 +274,42 @@
       <table class="row table table-hover table-documents">
         <thead>
           <tr>
-            <th class="col-xs-6" ng-click="sortDocuments(1)">{{ 'document.avg_gpa' | translate }} <span class="fas fa-chevron-{{ sortColumn == 1 ? (asc ? 'down' : 'up') : '' }}"></span></th>
-            <th class="col-xs-3" ng-click="sortDocuments(3)">{{ 'document.avg_experience' | translate }} <span class="fas fa-chevron-{{ sortColumn == 3 ? (asc ? 'down' : 'up') : '' }}"></span></th>
-            <th class="col-xs-3" ng-click="sortDocuments(3)">{{ 'document.avg_skills' | translate }} <span class="fas fa-chevron-{{ sortColumn == 3 ? (asc ? 'down' : 'up') : '' }}"></span></th>
+            <th class="col-xs-6" >{{ 'document.avg_gpa' | translate }} </th>
+            <th class="col-xs-6" >{{ 'document.avg_experience' | translate }} </th>
+            <th class="col-xs-6" >{{ 'document.avg_skills' | translate }} </th>
           </tr>
         </thead>
+
+        <tbody>
+        <tr ng-if="!documents">
+          <td colspan="3" class="text-center">
+            <span class="fas fa-circle-notch fa-spin"></span>
+          </td>
+        </tr>
+
+        <tr ng-if="totalDocuments == 0">
+          <td colspan="3" class="text-center">
+            <span ng-if="search.length == 0">{{ 'document.no_statistics' | translate }}</span>
+          </td>
+        </tr>
+
+        <!-- adding the statistics here below -->
+        <tr>
+          <td>
+            {{'document.language' | translate}}
+          </td>
+          <td>
+            {{'document.language' | translate}}
+          </td>
+          <td>
+            {{'document.language' | translate}}
+          </td>
+        </tr>
+
+
+      </tbody>
+
+
       </table>
 
       <!-- Document grid -->
