The front-end table is complete on the front-end, which is my assigned issue. I used dummy_values to currently populate the table. Waiting on Charly and Rahul's calculation variables for integration

--- a/docs-web/src/main/webapp/src/partial/docs/document.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.html
@@ -294,21 +294,18 @@
         </tr>
 
         <!-- adding the statistics here below -->
-        <tr>
+        <tr ng-if="totalDocuments!= 0">
           <td>
-            {{'document.language' | translate}}
+            {{'document.dummy_gpa' | translate}}
           </td>
           <td>
-            {{'document.language' | translate}}
+            {{'document.dummy_experience' | translate}}
           </td>
           <td>
-            {{'document.language' | translate}}
+            {{'document.dummy_skills' | translate}}
           </td>
         </tr>
-
-
       </tbody>
-
 
       </table>
 
