--- a/docs-web/src/main/webapp/src/partial/docs/document.edit.html
+++ b/docs-web/src/main/webapp/src/partial/docs/document.edit.html
@@ -56,7 +56,7 @@
       <div class="form-group" ng-class="{ 'has-error': !documentForm.gpa.$valid && documentForm.$dirty }">
         <label class="col-sm-2 control-label" for="inputGPA">{{ 'document.gpa' | translate }}</label>
         <div class="col-sm-10">
-          <input ng-maxlength="4" class="form-control" type="number" id="inputGPA"
+          <input ng-maxlength="4" class="form-control" step="0.01" type="number" id="inputGPA"
             name="gpa" ng-model="document.gpa" autocomplete="off" ng-disabled="fileIsUploading" />
         </div>
       </div>
